--- a/src/main/resources/templates/blocks/footer.html
+++ b/src/main/resources/templates/blocks/footer.html
@@ -50,7 +50,7 @@
             </div>
         </div>
 
-        <div class="text-center p-3" style="background-color: #43CA88; font-size: 14px">
+        <div class="text-center p-3" style="background-color: #B6F0C1; font-size: 14px">
             <a class="text-dark" href="https://github.com/Constantine-M">GitHub</a>
         </div>
     </footer>
