--- a/src/main/resources/templates/blocks/header.html
+++ b/src/main/resources/templates/blocks/header.html
@@ -1,13 +1,13 @@
 <!--    Через атрибут fragment мы указываем блок кода, который можно будет вызывать по заданному в этом атрибуте имени.
         В нашем случае имя = "header". Здесь мы выносим часть кода, которую впоследствии собираемся переиспользовать-->
-<div th:fragment="header">
-    <nav class="navbar navbar-expand navbar-light" style="background-color: #43CA88;">
+<div th:fragment="header" xmlns="http://www.w3.org/1999/html">
+    <nav class="navbar navbar-expand navbar-light" style="background-color: #B6F0C1;">
         <div class="container" style="font-size: 14px">
-            <a class="navbar-brand" href="/">
+            <a class="navbar-brand" style="font-size: 22px" href="/">
                 <!--Здесь мы использовали Tymeleaf для указания пути для картинки.
                     А также создали для картинок типа "лого" директорию "images" внутри "static".
                     И все получилось - картинка отображается на странице-->
-                <img th:src="@{/images/lowrider_logo3.png}" width="70" height="37" alt="">
+                <img th:src="@{/images/car_logo_4.png}" width="45" height="45" alt="">
                 Lowrider
             </a>
             <div class="collapse navbar-collapse">
@@ -17,24 +17,10 @@
                         пришлось вернуть me-auto. Поэтому, какой вариант итоговый -
                         не совсем понятно-->
                 <div class="navbar-nav mr-auto">
-                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDarkDropdown" aria-controls="navbarNavDarkDropdown" aria-expanded="false" aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
-                    </button>
-                    <div class="collapse navbar-collapse" id="navbarNavDarkDropdown">
-                        <ul class="navbar-nav">
-                            <li class="nav-item dropdown" style="font-size: 16px">
-                                <a class="nav-link dropdown-toggle" href="#" id="navbarDarkDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                                    Fast car filter
-                                </a>
-                                <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="navbarDarkDropdownMenuLink">
-                                    <li><a class="dropdown-item" th:href="@{/posts}">with mileage</a></li>
-                                    <li><a class="dropdown-item" th:href="@{/posts}">only new</a></li>
-                                </ul>
-                            </li>
-                        </ul>
-                    </div>
                     <div class="navbar-nav me-auto">
-                        <a class="nav-item nav-link" style="font-size: 16px" th:href="@{/posts/create}">Add post</a>
+                        <a class="nav-item nav-link" style="font-size: 18px" th:href="@{/index}">About us</a>
+                        <a class="nav-item nav-link" style="font-size: 18px" th:href="@{/userposts/create}">Add post</a>
+                        <a class="nav-item nav-link" style="font-size: 18px" th:href="@{/userposts}">My posts</a>
                     </div>
                 </div>
             </div>
@@ -42,26 +28,20 @@
                     Если пользователь вошел в систему, то ему выводится его имя и кнопка "Выйти".
                     Чтобы была возможность вывести кнопки навигационной панели, нужно во всех
                     контроллерах добавить вывод пользователя в модель.-->
-<!--            <div class="d-flex" style="font-size: 16px" th:switch="${user.getName()}">-->
-<!--                <a th:case="'Guest'">-->
-<!--                    <a class="nav-link text-secondary me-3" th:href="@{/users/register}">Registration</a>-->
-<!--                    <a class="nav-link text-secondary" th:href="@{/users/login}">Sign in</a>-->
-<!--                </a>-->
-<!--                <a th:case="null">-->
-<!--                    <a class="nav-link text-secondary me-3" th:href="@{/users/register}">Registration</a>-->
-<!--                    <a class="nav-link text-secondary" th:href="@{/users/login}">Sign in</a>-->
-<!--                </a>-->
-<!--                &lt;!&ndash;    DEFAULT CASE&ndash;&gt;-->
-<!--                <a th:case="*">-->
-<!--                    <a class="nav-link text-secondary me-3" href="#" th:text="${user.getName()}"></a>-->
-<!--                    <a class="nav-link text-secondary" th:href="@{/users/logout}">Sign out</a>-->
-<!--                </a>-->
-<!--            </div>-->
-
-            <!--    ЭТО ВРЕМЯНКА. ВВЕРХУ ГОТОВЫЙ ВАРИК-->
-            <div class="d-flex" style="font-size: 16px">
-                <a class="nav-link text-secondary me-3" th:href="@{/users/register}">Registration</a>
-                <a class="nav-link text-secondary" th:href="@{/users/login}">Sign in</a>
+            <div class="d-flex" style="font-size: 18px" th:switch="${user.getUsername()}">
+                <a th:case="'Guest'">
+                    <a class="nav-link text-secondary me-3" th:href="@{/users/register}">Registration</a>
+                    <a class="nav-link text-secondary" th:href="@{/users/login}">Sign in</a>
+                </a>
+                <a th:case="null">
+                    <a class="nav-link text-secondary me-3" th:href="@{/users/register}">Registration</a>
+                    <a class="nav-link text-secondary" th:href="@{/users/login}">Sign in</a>
+                </a>
+                <!--    DEFAULT CASE-->
+                <a th:case="*">
+                    <a class="nav-link text-secondary me-3" href="#" th:text="${user.getUsername()}"></a>
+                    <a class="nav-link text-secondary" th:href="@{/users/logout}">Sign out</a>
+                </a>
             </div>
         </div>
     </nav>
