--- a/src/main/resources/templates/users/login.html
+++ b/src/main/resources/templates/users/login.html
@@ -4,12 +4,18 @@
     <!--  Зависимости Bootstrap-->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link th:href = "@{/css/bootstrap.min.css}" rel="stylesheet">
-    <script th:src="@{/js/code.jquery.com_jquery-3.7.1.min.js}"></script>
-    <script th:src="@{/js/bootstrap.min.js}"></script>
-    <!--    Чтобы работал выпадающий список в навигационной панели, требуется
-            добавить эту зависимость, иначе ничего выпадать не будет!   -->
-    <script th:src="@{/js/bootstrap.bundle.js}"></script>
+
+    <script th:src="@{/bootstrap-5.3.3-dist/js/bootstrap.js}"></script>
+    <!--    Здесь я заменил bootstrap.min.css локальный на вариант CDN.
+            По сути можно использовать тот и другой вариант. Оба работают-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://getbootstrap.com/docs/5.3/assets/css/docs.css" rel="stylesheet">
+
+    <!--    Верхняя ссылка почему-то не работает с аккордеонами.
+            Поэтому я полдня игрался с CDN и прочей фигней и случайно
+            решил проблему. Но теперь не работает кнопка с выпадающим
+            меню!-->
+    <script href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 
     <!--    Здесь я задал стиль для body и футера таким образом,
             чтобы наш футер всегда был внизу, вне зависимости от того,
@@ -53,8 +59,8 @@
                     </div>
                     <div class="col-5">
                         <div class="row">
-                            <div class="col-6"><a class="btn btn-danger w-100" th:href="@{/}">Cancel</a></div>
-                            <div class="col-6"><button class="btn btn-primary w-100" type="submit">Sign in</button>
+                            <div class="col-6"><a class="btn btn-outline-danger w-100" th:href="@{/}">Cancel</a></div>
+                            <div class="col-6"><button class="btn btn-outline-success w-100" type="submit">Sign in</button>
                             </div>
                         </div>
                     </div>
